--- a/index.html
+++ b/index.html
@@ -1,12 +1,244 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
+ 	<head>
+		<meta charset="utf-8">
+    	<title>Дизайн-студия Nerds</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=cyrillic" rel="stylesheet">
+        <link href="css/normalize.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+    </head>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+    <body>
+    	<header class="main-header">
+            <div class="container">
+    		<nav class="main-navigaton">
+                <a class="header-logo">
+    				<img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Дизайн-студии Nerds">
+    			</a>
+    			<ul class="site-navigation">
+    				<li><a href="studio.html">Студия</a></li>
+    				<li><a href="clients.html">Клиенты</a></li>
+    				<li><a href="catalog.html">Магазин</a></li>
+    				<li><a href="contacts.html">Контакты</a></li>
+    			</ul>
+    			<ul class="cart-navigation">
+    				<li><a class="cart-link" href="cart.html">Корзина</a></li>
+    			</ul>
+    		</nav>
+            </div>
+    	</header>
 
-  </body>
+    	<main>
+    		<h1 class="visually-hidden">Дизайн-студия Nerds</h1>
+            <div class="slider-wrapper">
+                <div class="container">    
+                    <section class="slider">
+                        <h2 class="visually-hidden">Преимущества</h2>
+                        <input type="radio" name="toggle" id="btn-1" checked>
+                        <input type="radio" name="toggle" id="btn-2">
+                        <input type="radio" name="toggle" id="btn-3">
+                        <div class="slider-controls">
+                            <label for="btn-1"></label>
+                            <label for="btn-2"></label>
+                            <label for="btn-3"></label>
+                        </div>
+                        <div class="slides">
+                            <div class="slide">
+                                <div class="slide-text">
+                                    <h3>Долго, дорого, скрупулезно.</h3>
+                                    <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+                                    <a class="button" href="#">Узнать больше</a>
+                                </div>   
+                            </div>
+                            <div class="slide">
+                                <div class="slide-text">
+                                    <h3>Любим математику как никто другой</h3>
+                                    <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+                                    <a class="button" href="#">Узнать больше</a>
+                                </div>   
+                            </div>
+                            <div class="slide">
+                                <div class="slide-text">
+                                    <h3>Только ночь, только хардкор</h3>
+                                    <p>Работать днем как все? Мы против этого. Ближе к полуночи работа только начинается</p>
+                                    <a class="button" href="#">Узнать больше</a>
+                                </div>   
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+
+            <div class="container">
+        		<section class="services">
+        			<h2 class="visually-hidden">Услуги</h2>
+        			<ul class="service-list">
+        				<li class="service-item">
+        					<a href="#">
+        						<img src="img/illustration-1.png" width="300" height="145" alt="Веб-сайты">
+        					</a>
+                            <h3>Веб-сайты</h3>
+                            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+        					<a class="button" href="#">Заказать</a>
+        				</li>
+        				<li class="service-item">
+        					<a href="#">
+        						<img src="img/illustration-2.png" width="300" height="145" alt="Веб-сайты">
+        					</a>
+                            <h3>Приложения</h3>
+                            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+        					<a class="button" href="#">Заказать</a>
+        				</li>
+        				<li class="service-item">
+        					<a href="#">
+        						<img src="img/illustration-3.png" width="300" height="145" alt="Веб-сайты">
+        					</a>
+                            <h3>Презентации</h3>
+                            <p>Вы даже не подозреваете, насколько вы изумительны</p>
+        					<a class="button" href="#">Заказать</a>
+        				</li>
+        			</ul>
+        		</section>
+
+
+            <div class="index-columns">
+                <section class="about-us">
+                    <span class="slogan">Мы-маленькая, но гордая дизайн-студия из Краснодара</span>
+                    <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+                    <h3>Выполняем заказы на разработку:</h3>
+                    <ul class="list-orders">
+                        <li class="order-item">Веб-сайтов любой сложности</li>
+                        <li class="order-item">Мобильных приложений для iOS и Android</li>
+                        <li class="order-item">Слайдшоу и видео для корпоративных презентаций</li>
+                    </ul>
+                </section>
+
+                <section class="statistic">
+                    <h2 class="visually-hidden">Статистика</h2>
+                    <div class="statistic-table">
+                        <table>
+                            <caption class="statistic-title">С 2004 года любим точность во всем:</caption>
+                            <tr class="statistic-value">
+           				        <td>146<sup>%</sup></td>
+           					    <td>100<sup>%</sup></td>
+           					    <td>50<sup>%</sup></td>
+                            </tr>
+                            <tr class="statistic-item">
+                                <th>Уровень самоотдачи</th>
+           	        			<th>Соблюдение сроков</th>
+           	            		<th>Минимальная предоплата</th>
+                            </tr>
+                        </table>
+                    </div>
+                </section>
+            </div>
+
+    		<section class="clients">
+    			<h2 class="visually-hidden">Клиенты</h2>
+    			<ul class="client-list">
+    				<li class="client-item">
+    					<a class="client-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+    						<img src="img/logo-1.png" alt="HTML Academy">
+    					</a>
+    				</li>
+    				<li class="client-item">
+    					<a class="client-logo" href="#">
+    						<img src="img/logo-2.png" alt="Barbershop Borodinski">
+    					</a>
+    				</li>
+    				<li class="client-item">
+    					<a class="client-logo" href="#">
+    						<img src="img/logo-3.png" alt="Pink">
+    					</a>
+    				</li>
+    				<li class="client-item">
+    					<a class="client-logo" href="#">
+    						<img src="img/logo-4.png" alt="Mishka">
+    					</a>
+    				</li>
+    			</ul>
+    		</section>
+            </div>
+    	</main>
+
+    	<footer class="main-footer">
+            <section class="map">
+                <h2 class="visually-hidden">Как до нас добраться</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424177499!2d30.320889251546724!3d59.93879686895912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1502782145171" allowfullscreen width="100%" height="416"></iframe>
+                <img src="img/map.png" width="1160" height="416" alt="Nerds design studio по адресу ул. Б.Конюшенная, д. 19/8, г. Санкт-Петербург">
+                <div class="container">
+                    <div class="contacts">
+                        <h3>Nerds design studio</h3>
+                        <p>
+                        191186, Санкт-Петербург,<br> 
+                        ул. Б. Конюшенная, д. 19/8</p>
+                        <p>тел. +7(812)275-75-75</p>
+        				<a class="button write-us" href="#">Напишите нам</a>
+        			</div>
+
+                </div>
+    		</section>
+    		
+            <div class="container">
+        		<div class="footer-social">
+        			<ul>
+        				<li>
+                            <a class="social-button" href="#">
+                                <span class="visually-hidden">Вконтакте</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                                    <path fill="currentColor" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+        				<li>
+                            <a class="social-button" href="#">
+                                <span class="visually-hidden">Фейсбук</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                                    <path fill="currentColor" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+        				<li>
+                            <a class="social-button" href="#">
+                                <span class="visually-hidden">Инстаграм</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                                    <path fill="currentColor" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </li>
+        			</ul>
+        			<p>
+                        <b>Давайте дружить, это выгодно!</b>
+                        Скидка 10% для друзей из социальных сетей
+                    </p>
+        		</div>
+            </div>
+        </footer>
+
+    	<section class="modal modal-feedback">
+            <h2>Напишите нам</h2>
+			<form class="feedback-form" method="post" action="https://echo.htmlacademy.ru">
+                <p class="modal-item">
+                    <label for="user-name">Ваше имя:</label>
+                    <input type="text" name="user-name" id="user-name" placeholder="Представьтесь, пожалуйста" required>
+                </p>
+                <p class="modal-item">
+                    <label for="e-mail">Ваш e-mail:</label>
+                    <input type="email" name="email" id="e-mail" placeholder="Для отправки ответа" required>
+                    </p>
+                <p class="modal-item">
+                    <label for="text">Текст письма:</label>
+                    <textarea name="text" id="text" rows="4" placeholder="В свободной форме" required></textarea>
+                </p>
+            	<button class="button" type="submit">Отправить</button>
+           	</form>
+        	<button class="modal-close" type="button">Закрыть</button>
+    	</section>
+
+        <script src="js/feedback.js" type="text/javascript"></script>
+
+    </body>
 </html>
