--- a/catalog.html
+++ b/catalog.html
@@ -300,7 +300,7 @@
             <button class="modal-close" type="button">Закрыть</button>
         </section>
 
-        <script src="js/feedback.js" type="text/javascript"></script>
+        <script src="js/feedback.js"></script>
 
     </body>
 </html>
