--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         	<button class="modal-close" type="button">Закрыть</button>
     	</section>
 
-        <script src="js/feedback.js" type="text/javascript"></script>
+        <script src="js/feedback.js"></script>
 
     </body>
 </html>
