--- a/index.html
+++ b/index.html
@@ -138,22 +138,22 @@
     			<ul class="client-list">
     				<li class="client-item">
     					<a class="client-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-    						<img src="img/logo-1.png" alt="HTML Academy">
+    						<img src="img/logo-1.png" width="200" height="68" alt="HTML Academy">
     					</a>
     				</li>
     				<li class="client-item">
     					<a class="client-logo" href="#">
-    						<img src="img/logo-2.png" alt="Barbershop Borodinski">
+    						<img src="img/logo-2.png" width="210" height="90" alt="Barbershop Borodinski">
     					</a>
     				</li>
     				<li class="client-item">
     					<a class="client-logo" href="#">
-    						<img src="img/logo-3.png" alt="Pink">
+    						<img src="img/logo-3.png" width="185" height="52" alt="Pink">
     					</a>
     				</li>
     				<li class="client-item">
     					<a class="client-logo" href="#">
-    						<img src="img/logo-4.png" alt="Mishka">
+    						<img src="img/logo-4.png" width="173" height="84" alt="Mishka">
     					</a>
     				</li>
     			</ul>
