--- a/catalog.html
+++ b/catalog.html
@@ -226,8 +226,8 @@
         <footer class="main-footer">
             <section class="map">
                 <h2 class="visually-hidden">Как до нас добраться</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424177499!2d30.320889251546724!3d59.93879686895912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1502782145171" allowfullscreen width="100%" height="416"></iframe>
-                <img src="img/map.png" width="1160" height="416" alt="Nerds design studio по адресу ул. Б.Конюшенная, д. 19/8, г. Санкт-Петербург">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424177499!2d30.320889251546724!3d59.93879686895912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1502782145171" allowfullscreen width="1440" height="416"></iframe>
+                <img src="img/map.png" width="1440" height="416" alt="Nerds design studio по адресу ул. Б.Конюшенная, д. 19/8, г. Санкт-Петербург">
                 <div class="container">
                     <div class="contacts">
                         <h3>Nerds design studio</h3>
